# try.rs

./: .gitignore  CHANGELOG.md  COMPAT.md  Cargo.toml  README.md  RELEASING.md  demo.tape  deny.toml  flake.nix  hk.pkl  mise.toml  try.usage.kdl
.github/ISSUE_TEMPLATE/: bug.yaml  cli.yaml  feature.yaml  tui.yaml
.github/workflows/: ci.yml  demo.yml  release.yml
completions/: tryme.bash  tryme.fish  tryme.zsh
crates/tryme/: Cargo.toml
crates/tryme-core/: Cargo.toml
crates/tryme-core/src/: argv.rs  dispatch.rs  emit.rs  env.rs  fuzzy.rs  giturl.rs  help.rs  lib.rs  naming.rs  scan.rs  scripts.rs  selector.rs  testkeys.rs  tui.rs  wrappers.rs
crates/tryme-core/tests/: fuzzy_oracle.rs
crates/tryme/src/: cli.rs  main.rs
crates/tryme/tests/: contracts.rs  golden_frames.rs
docs/adr/: 0001-naming.md  0002-versioning.md  0003-divergence-authority.md  0004-staging.md  0005-tmux-ci-policy.md  0006-windows-deferred.md
docs/man/: tryme.1
scripts/: conformance-ratchet.sh  gen-cli-docs.sh  gen-fuzzy-oracle.sh  gen-golden-frames.sh  golden-fixtures.sh  smoke.sh  sync-upstream-spec.sh
spec/: UPSTREAM
testdata/: fuzzy_oracle.json
