# try.rs workspace — a Rust port of tobi/try (conformance target: v1.9.3).
# Decisions are recorded in docs/adr/.
[workspace]
resolver = "2"
members = ["crates/tryme-core", "crates/tryme"]

[workspace.package]
version = "0.0.0"
edition = "2021"
# MSRV set empirically: kdl 6.7.1 (via clap_usage) requires rustc 1.95;
# the full workspace builds on 1.95 (verified 2026-07-10). CI-tested below.
rust-version = "1.95"
license = "MIT"
repository = "https://github.com/indexzero/try.rs"
homepage = "https://github.com/indexzero/try.rs"
authors = ["Charlie Robbins <charlie.robbins@gmail.com>"]

# Dependency versions verified on crates.io 2026-07-10.
# signal-hook 0.4 (not the plan's 0.3 — 0.4.4 is current stable; SDD correction).
[workspace.dependencies]
clap = { version = "4.6", features = ["derive", "env", "wrap_help"] }
clap_usage = "2.0"
thiserror = "2"
anyhow = "1"
rustix = { version = "1.1", features = ["termios", "stdio", "event"] }
signal-hook = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
directories = "6"
tempfile = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
try-me-maybe-core = { path = "crates/tryme-core" }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Stream separation is load-bearing: stdout carries ONLY the emitted shell
# script (the wrapper evals it). Ad-hoc print macros are denied everywhere;
# the blessed writers use injected handles.
print_stdout = "deny"
print_stderr = "deny"

[profile.release]
lto = "thin"
strip = true
# panic stays "unwind" (default): the TUI's terminal-restoration panic hook
# requires it — do not add panic = "abort".
