[package]
name = "try-me-maybe-core"
description = "Core library for try-me-maybe, a Rust port of tobi/try (ephemeral workspace manager)"
readme = "../../README.md"
keywords = ["cli", "workspace", "tries", "experiments"]
categories = ["command-line-utilities"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lib]
name = "tryme_core"

[dependencies]
rustix.workspace = true
signal-hook.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
