[package]
name = "try-me-maybe"
description = "Rust port of tobi/try — instant, fuzzy-searchable, dated experiment directories. Binary: tryme; shell function: try."
readme = "../../README.md"
keywords = ["cli", "workspace", "tries", "experiments", "tui"]
categories = ["command-line-utilities"]
default-run = "tryme"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

# ADR-0001: binary is `tryme` in every channel; the user-facing `try` is the
# wrapper function emitted by `tryme init`.
[[bin]]
name = "tryme"
path = "src/main.rs"

[dependencies]
try-me-maybe-core.workspace = true
clap.workspace = true
clap_usage.workspace = true
chrono.workspace = true

# cargo-machete can't map the package name to the renamed lib target
# ([lib] name = "tryme_core"), so it false-positives this real dependency.
[package.metadata.cargo-machete]
ignored = ["try-me-maybe-core"]

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true

# Verified against dist 0.32.0 output (local `dist build --artifacts=local`,
# 2026-07-10): artifacts are `{name}-{target}.tar.xz` containing
# `{name}-{target}/{bin}`. Re-verify with `cargo binstall try-me-maybe
# --dry-run` once the first GitHub release exists.
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }{ archive-suffix }"
bin-dir = "{ name }-{ target }/{ bin }{ binary-ext }"
pkg-fmt = "txz"
